refactoring of AccountService and AccountController